--- a/Machine_learning.ipynb
+++ b/Machine_learning.ipynb
@@ -2,45 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "install.packages(\"datarium\", dependencies = TRUE, repos = \"http://cran.rstudio.com/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading required package: lattice\n",
-      "Loading required package: ggplot2\n",
-      "-- \u001b[1mAttaching packages\u001b[22m --------------------------------------- tidyverse 1.2.1 --\n",
-      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 2.1.1       \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.2  \n",
-      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 0.8.3       \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 0.8.0.\u001b[31m1\u001b[39m\n",
-      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1       \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0  \n",
-      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 2.1.1       \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.4.0  \n",
-      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------ tidyverse_conflicts() --\n",
-      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31mx\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32mlift()\u001b[39m   masks \u001b[34mcaret\u001b[39m::lift()\n"
+      "Installing package into 'C:/Users/Utilisateur/Documents/R/win-library/3.5'\n",
+      "(as 'lib' is unspecified)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package 'randomForest' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\Utilisateur\\AppData\\Local\\Temp\\RtmpcDjraN\\downloaded_packages\n"
+     ]
+    }
+   ],
+   "source": [
+    "install.packages(\"randomForest\", dependencies = TRUE, repos = \"http://cran.rstudio.com/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "randomForest 4.6-14\n",
+      "Type rfNews() to see new features/changes/bug fixes.\n",
+      "\n",
+      "Attaching package: 'randomForest'\n",
+      "\n",
+      "The following object is masked from 'package:dplyr':\n",
+      "\n",
+      "    combine\n",
+      "\n",
+      "The following object is masked from 'package:ggplot2':\n",
+      "\n",
+      "    margin\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "library(datarium)\n",
     "library(caret)\n",
-    "library(tidyverse)"
+    "library(tidyverse)\n",
+    "library(e1071)\n",
+    "library(randomForest)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -62,9 +92,9 @@
        "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>  4.92</td><td>13.92</td><td> 6.84</td><td> 3.84</td></tr>\n",
-       "\t<tr><td>341.16</td><td>12.72</td><td> 7.68</td><td>18.00</td></tr>\n",
-       "\t<tr><td>244.92</td><td>39.48</td><td>55.20</td><td>22.80</td></tr>\n",
+       "\t<tr><td>256.08</td><td>29.52</td><td>15.72</td><td>20.40</td></tr>\n",
+       "\t<tr><td>238.92</td><td>36.72</td><td>46.44</td><td>21.96</td></tr>\n",
+       "\t<tr><td>165.48</td><td>55.68</td><td>70.80</td><td>23.04</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -74,9 +104,9 @@
        " youtube & facebook & newspaper & sales\\\\\n",
        " <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t   4.92 & 13.92 &  6.84 &  3.84\\\\\n",
-       "\t 341.16 & 12.72 &  7.68 & 18.00\\\\\n",
-       "\t 244.92 & 39.48 & 55.20 & 22.80\\\\\n",
+       "\t 256.08 & 29.52 & 15.72 & 20.40\\\\\n",
+       "\t 238.92 & 36.72 & 46.44 & 21.96\\\\\n",
+       "\t 165.48 & 55.68 & 70.80 & 23.04\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -85,16 +115,16 @@
        "\n",
        "| youtube &lt;dbl&gt; | facebook &lt;dbl&gt; | newspaper &lt;dbl&gt; | sales &lt;dbl&gt; |\n",
        "|---|---|---|---|\n",
-       "|   4.92 | 13.92 |  6.84 |  3.84 |\n",
-       "| 341.16 | 12.72 |  7.68 | 18.00 |\n",
-       "| 244.92 | 39.48 | 55.20 | 22.80 |\n",
+       "| 256.08 | 29.52 | 15.72 | 20.40 |\n",
+       "| 238.92 | 36.72 | 46.44 | 21.96 |\n",
+       "| 165.48 | 55.68 | 70.80 | 23.04 |\n",
        "\n"
       ],
       "text/plain": [
        "  youtube facebook newspaper sales\n",
-       "1   4.92  13.92     6.84      3.84\n",
-       "2 341.16  12.72     7.68     18.00\n",
-       "3 244.92  39.48    55.20     22.80"
+       "1 256.08  29.52    15.72     20.40\n",
+       "2 238.92  36.72    46.44     21.96\n",
+       "3 165.48  55.68    70.80     23.04"
       ]
      },
      "metadata": {},
@@ -107,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,6 +218,41 @@
     "# 2.R2\n",
     "r2 <- R2(predictions, test.data$sales)\n",
     "print(list(\"R2\"=r2,\"RMSE\"=rmse))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fitControl <- trainControl(method=\"none\")\n",
+    "mlr_model <- train(sales~., data=train.data,trControl=fitControl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Call:\n",
+      " randomForest(x = x, y = y, mtry = param$mtry) \n",
+      "               Type of random forest: regression\n",
+      "                     Number of trees: 500\n",
+      "No. of variables tried at each split: 1\n",
+      "\n",
+      "          Mean of squared residuals: 3.778324\n",
+      "                    % Var explained: 90.52\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mlr_model$finalModel)"
    ]
   },
   {
